--- a/react-admin_client/package.json
+++ b/react-admin_client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.4",
+    "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^1.0.0",
     "react": "^16.13.1",
@@ -39,5 +40,6 @@
   "devDependencies": {
     "less": "^3.11.1",
     "less-loader": "^5.0.0"
-  }
+  },
+  "proxy": "http://localhost:9000"
 }
