--- a/react-admin_client/package.json
+++ b/react-admin_client/package.json
@@ -10,9 +10,12 @@
     "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^1.0.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "store": "^2.0.12"
