--- a/react-admin_client/package.json
+++ b/react-admin_client/package.json
@@ -9,9 +9,12 @@
     "antd": "^4.6.4",
     "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.0",
+    "bizcharts": "^4.0.14",
     "customize-cra": "^1.0.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "echarts": "^4.9.0",
+    "echarts-for-react": "^2.0.16",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
